DOCS: Documentación de apis y traducción de validacion completo
