# storage/api-docs/api-docs.json
@@ -9,14 +9,14 @@
         "/api/orders": {
             "get": {
                 "tags": [
-                    "Orders"
+                    "Ordenes"
                 ],
-                "summary": "Get all orders",
-                "description": "Retrieve a list of all orders",
+                "summary": "Obtener todas las ordenes",
+                "description": "Retorna la lista de ordenes",
                 "operationId": "2cd7e03021e72d9d799c12dfe179c865",
                 "responses": {
                     "200": {
-                        "description": "List of orders",
+                        "description": "Lista de ordened",
                         "content": {
                             "application/json": {
                                 "schema": {
@@ -29,13 +29,16 @@
                         }
                     },
                     "500": {
-                        "description": "Error retrieving orders"
+                        "description": "Error listando la información."
                     }
                 }
             },
             "post": {
-                "summary": "Create a new order",
-                "description": "Create a new order associated with a user and products",
+                "tags": [
+                    "Ordenes"
+                ],
+                "summary": "Crear nueva orden",
+                "description": "Crear una nueva orden con el ID del usuario y los productos (ID, quantity)",
                 "operationId": "d690d6834318e9b064df441e854de8b9",
                 "requestBody": {
                     "required": true,
@@ -71,7 +74,7 @@
                 },
                 "responses": {
                     "201": {
-                        "description": "Order created successfully",
+                        "description": "Tu orden ha sido realizada",
                         "content": {
                             "application/json": {
                                 "schema": {
@@ -81,18 +84,21 @@
                         }
                     },
                     "400": {
-                        "description": "Invalid request"
+                        "description": "Petición invalida"
                     },
                     "500": {
-                        "description": "Error creating order"
+                        "description": "Error registrando la orden"
                     }
                 }
             }
         },
         "/api/orders/{id}": {
             "get": {
-                "summary": "Get an order",
-                "description": "Retrieve details of a specific order",
+                "tags": [
+                    "Ordenes"
+                ],
+                "summary": "Obtener un order",
+                "description": "Retorna la ifnromación de una orde especfica por ID",
                 "operationId": "c29621029e70f65247909d3e09031118",
                 "parameters": [
                     {
@@ -116,16 +122,19 @@
                         }
                     },
                     "404": {
-                        "description": "Order not found"
+                        "description": "Orden no encontrada"
                     },
                     "500": {
-                        "description": "Error retrieving order"
+                        "description": "Error obteniendo la orden"
                     }
                 }
             },
             "delete": {
-                "summary": "Delete an order",
-                "description": "Delete a specific order by its ID",
+                "tags": [
+                    "Ordenes"
+                ],
+                "summary": "ELiminar order",
+                "description": "Elimina una orden permanentemente por su ID",
                 "operationId": "303a7b797887b66c7790c4c187b54790",
                 "parameters": [
                     {
@@ -155,10 +164,108 @@
                         }
                     },
                     "404": {
-                        "description": "Order not found"
+                        "description": "Orden no encotrada"
                     },
                     "500": {
-                        "description": "Error deleting order"
+                        "description": "Error eliminado la order"
+                    }
+                }
+            }
+        },
+        "/orders/{id}/status": {
+            "patch": {
+                "tags": [
+                    "Ordenes"
+                ],
+                "summary": "Actualizar el estado de las ordenes",
+                "description": "Actualiza el estado de la orden (entregado, cancelado)",
+                "operationId": "updateOrderStatus",
+                "parameters": [
+                    {
+                        "name": "orderId",
+                        "in": "path",
+                        "description": "Id de la orden a actualizar",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "description": "Nuevo estado para la orden.",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "status"
+                                ],
+                                "properties": {
+                                    "status": {
+                                        "description": "Estados para la orden  'entregado', 'cancelado'.",
+                                        "type": "string",
+                                        "enum": [
+                                            "entregado",
+                                            "cancelado"
+                                        ]
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Estado de la orden actualizado.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Estado de la orden actualizado"
+                                        },
+                                        "data": {
+                                            "$ref": "#/components/schemas/Order"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "EL estado solicitado no es válido",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "error": {
+                                            "type": "string",
+                                            "example": "Estado no valido."
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "No se encotró la ordern",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "error": {
+                                            "type": "string",
+                                            "example": "Estado de la orden actualizado"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
                     }
                 }
             }
@@ -166,14 +273,14 @@
         "/api/products": {
             "get": {
                 "tags": [
-                    "Products"
+                    "Productos"
                 ],
                 "summary": "Obtener todos los productos",
                 "description": "Retorna una lista de todos los productos",
                 "operationId": "1bfaa78d1c2c3848ab8165c5dadcad3e",
                 "responses": {
                     "200": {
-                        "description": "List of products",
+                        "description": "Lista de productos",
                         "content": {
                             "application/json": {
                                 "schema": {
@@ -186,13 +293,16 @@
                         }
                     },
                     "500": {
-                        "description": "Server error"
+                        "description": "Error al obtener productos"
                     }
                 }
             },
             "post": {
-                "summary": "Create a new product",
-                "description": "Creates a new product and returns the created product",
+                "tags": [
+                    "Productos"
+                ],
+                "summary": "Crear un nuevo producto",
+                "description": "Crear un nuevo producto y retorna un estado 201",
                 "operationId": "e8185e307706e2cd84bbcf5171e2f09d",
                 "requestBody": {
                     "required": true,
@@ -222,7 +332,7 @@
                 },
                 "responses": {
                     "201": {
-                        "description": "Product created successfully",
+                        "description": "Producto registrado correctamente",
                         "content": {
                             "application/json": {
                                 "schema": {
@@ -232,18 +342,21 @@
                         }
                     },
                     "400": {
-                        "description": "Bad Request"
+                        "description": "Error en la solicitud"
                     },
                     "500": {
-                        "description": "Server error"
+                        "description": "Error al crear el producto"
                     }
                 }
             }
         },
         "/api/products/{id}": {
             "get": {
-                "summary": "Get a product by ID",
-                "description": "Returns a single product by ID",
+                "tags": [
+                    "Productos"
+                ],
+                "summary": "Obtener producto por ID",
+                "description": "Retorne el objeto del prodcuto obtenido por ID",
                 "operationId": "7ab21ddb713501f3d4c2914892c02a21",
                 "parameters": [
                     {
@@ -257,7 +370,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Product data",
+                        "description": "Data del producto obetnido",
                         "content": {
                             "application/json": {
                                 "schema": {
@@ -267,16 +380,19 @@
                         }
                     },
                     "404": {
-                        "description": "Product not found"
+                        "description": "Productono encontrado"
                     },
                     "500": {
-                        "description": "Server error"
+                        "description": "Erro al obtener el producto"
                     }
                 }
             },
             "put": {
-                "summary": "Update a product by ID",
-                "description": "Updates an existing product and returns the updated product",
+                "tags": [
+                    "Productos"
+                ],
+                "summary": "Actualizar producto por ID",
+                "description": "Actualizar un producto por refereciado por su ID",
                 "operationId": "6a7e11900844cd85cff66e662b82bd4c",
                 "parameters": [
                     {
@@ -316,7 +432,7 @@
                 },
                 "responses": {
                     "200": {
-                        "description": "Product updated",
+                        "description": "Producto actualizado correctamente.",
                         "content": {
                             "application/json": {
                                 "schema": {
@@ -326,16 +442,19 @@
                         }
                     },
                     "404": {
-                        "description": "Product not found"
+                        "description": "Producto no encotrado"
                     },
                     "500": {
-                        "description": "Server error"
+                        "description": "Error al actualizar producto"
                     }
                 }
             },
             "delete": {
-                "summary": "Delete a product by ID",
-                "description": "Deletes an existing product by ID",
+                "tags": [
+                    "Productos"
+                ],
+                "summary": "Eliminar producto por ID",
+                "description": "Elimina un producto referenciado por su ID",
                 "operationId": "e80a6ca46716acee6b47ea1ac91663c0",
                 "parameters": [
                     {
@@ -349,7 +468,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Product deleted",
+                        "description": "Producto eliminado con éxtio",
                         "content": {
                             "application/json": {
                                 "schema": {
@@ -365,10 +484,10 @@
                         }
                     },
                     "404": {
-                        "description": "Product not found"
+                        "description": "Producto no encontrado"
                     },
                     "500": {
-                        "description": "Server error"
+                        "description": "Error al eliminar el prodcuto"
                     }
                 }
             }
@@ -445,11 +564,11 @@
     },
     "tags": [
         {
-            "name": "Products",
+            "name": "Productos",
             "description": "Endpoints - productos"
         },
         {
-            "name": "Orders",
+            "name": "Ordenes",
             "description": "Endpoints - órdenes"
         }
     ]
